syntax = "proto3";
import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "me.kcybulski.ces";
option java_outer_classname = "EventStoreProto";

package ces;

message Stream {
  oneof kind {
    string streamId = 1;
    bool global = 2;
  }
}

message ExpectedSequenceNumber {
  oneof kind {
    int32 specificSequenceNumber = 1;
    bool any = 2;
  }
}

message EventStreamQuery {
  string id = 1;
}

message PublishEvent {
  Stream stream = 1;
  ExpectedSequenceNumber expectedSequenceNumber = 2;
  string type = 3;
  string payload = 4;
}

message Message {
  oneof message {
    EventStreamQuery streamQuery = 1;
    PublishEvent publish = 2;
  }
}

message StreamedEvent {
  string id = 1;
  string type = 2;
  google.protobuf.Timestamp timestamp = 3;
  string payload = 4;
}

message EventStream {
  repeated StreamedEvent event = 1;
}

message Response {
  oneof responses {
    EventStream eventStream = 1;
  }
}

service Streaming {
  rpc Pipe(stream Message) returns (stream Response) {}
}